# panelforge-figures

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .zenodo.json  AGENT_BOOTSTRAP.md  CHANGELOG.md  CITATION.cff  CLAUDE_CODE_AUTONOMOUS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  SETUP-PYPI.md  SETUP-ZENODO.md  SUPPORT.md  action.yml  pyproject.toml  recipes_index.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  panelforge-ci.yml.template  recipe_tags_audit.yml  release.yml  secret-scan.yml
docs/: AGENT_RECIPES.md  RECIPE_SELECTION.md  RECIPE_SELECTION_OFFLINE.md  ROADMAP_v2.md  adapters.md  adding_a_modality.md  adding_a_recipe.md  architecture.md  architecture_deep_dive.md  biophysics_scaling_beta_pack_tracker.md  cdc42_factorial_companion_pack_tracker.md  disc1_manuscript_companion_pack_tracker.md  hydration_brief.md  hydration_coordinator.md  index.md  intravital_imaging_beta_pack_tracker.md  manifest_schema.md  palettes.md  provenance.schema.json  quickstart.md  recipe_gap_tracker.md  recipe_tags.yaml  recipes_by_modality.md  recipes_by_question.md  recipes_index.schema.json  spec_active_learning.md  spec_composition_layer.md  spec_cross_project.md  spec_data_class_safety.md  spec_project_plugins.md  spec_provenance_chain.md  spec_statistical_contract.md  spec_vision_input.md  themes.md
docs/gallery/: index.md
docs/hydration_briefs/: session_01_rhogtpase_dynamics.md  session_02_fret_biosensors.md  session_03_actin_microtubule_morphometry.md  session_04_mixed_effects_models.md  session_05_sensitivity_analysis.md  session_06_redox_imaging.md  session_07_intravital_imaging.md  session_08_gillespie_stochastic.md  session_09_omics_differential.md  session_10_calcium_signaling.md  session_11_single_cell_embeddings.md  session_12_dose_response_pharmacology.md  session_13_network_and_pathway.md  session_14_biophysics_scaling.md  session_15_diffusion_and_tracking.md  session_16_spatial_statistics.md  session_17_grant_and_conceptual.md  session_18_meta_and_diagnostic.md  session_19_clinical_cohort.md  session_20_cryoem_and_structure.md
docs/hydration_gap_analysis/: session_01_rhogtpase_dynamics.md  session_02_fret_biosensors.md  session_03_actin_microtubule_morphometry.md  session_04_mixed_effects_models.md  session_05_sensitivity_analysis.md  session_06_redox_imaging.md  session_07_intravital_imaging.md  session_08_gillespie_stochastic.md  session_09_omics_differential.md  session_10_calcium_signaling.md  session_11_single_cell_embeddings.md  session_12_dose_response_pharmacology.md  session_13_network_and_pathway.md  session_14_biophysics_scaling.md  session_15_diffusion_and_tracking.md  session_16_spatial_statistics.md  session_17_grant_and_conceptual.md  session_18_meta_and_diagnostic.md  session_19_clinical_cohort.md  session_20_cryoem_and_structure.md  session_s03b_actin_microtubule_morphometry.md
panelforge_workspace/: README.md
skill/: SKILL.md
skill/example_manifests/: fct_grant.yaml  horizon_grant.yaml  multi_modality_composite.yaml  sensitivity_analysis_manuscript.yaml
skill/modes/: add_figure.md  bootstrap.md  resurvey.md
skill/references/: adapter_guide.md  contract_reference.md  local_adapter_template.py  manifest_schema.md  modality_guide.md  recipe_catalog_format.md
skill/templates/: figures.manifest.yaml  figures.theme.toml  local_adapter_skeleton.py
src/panelforge_figures/: __init__.py  __main__.py  cli.py
src/panelforge_figures/adapters/: __init__.py  base.py  numpy_npz.py  pandas_pickle.py  passthrough.py  tabular.py
src/panelforge_figures/cli/: README.md  __init__.py  __main__.py  tui_scout.py
src/panelforge_figures/core/: README.md  __init__.py  aesthetic_base.py  bayes_factor_utility.py  contract.py  export.py  gam_logistic_utility.py  hmm_decoding_utility.py  km_survival_utility.py  layout.py  multiverse_specification_utility.py  palette.py  permanova_null_utility.py  primitives.py  qa.py  spectral_embedding_utility.py  statistical_contract.py  style.py  tost_bounds_utility.py  transfer_entropy_utility.py
src/panelforge_figures/gallery/: __init__.py  generator.py
src/panelforge_figures/manifest/: README.md  __init__.py  _figure_id.py  _tfidf.py  auto_tag.py  bias_auditor.py  caption.py  catalog.py  ci_runner.py  citation_inserter.py  claim_check.py  data_bridge.py  execute_plan.py  family_bridge.py  family_recommender.py  figure_composition.py  figure_schema.py  intake.py  manuscript_alignment.py  manuscript_blueprint.py  manuscript_collision.py  manuscript_parse.py  manuscript_scaffold.py  novelty_scout.py  power.py  power_families.py  project_scan.py  provenance.py  recipe_authoring.py  render_cache.py  render_loop.py  reporting_checklists.py  reproducibility.py  resolver.py  schema.py  scoring.py  scout.py  star_methods.py  statistical_audit.py  (+7 more)
tests/: conftest.py  test_aesthetic_compliance.py  test_agent_bootstrap_links.py  test_audit_cli.py  test_auto_tag.py  test_autonomous_checkpoints.py  test_bayes_factor_utility.py  test_bias_auditor.py  test_caption.py  test_catalog_json.py  test_ci_action_template.py  test_ci_runner.py  test_citation_inserter.py  test_claim_check.py  test_cli.py  test_cli_index.py  test_cli_lock_replay.py  test_compose_cli.py  test_contracts.py  test_cross_modality_qa.py  test_data_bridge.py  test_data_class_safety.py  test_e2e_discovery.py  test_empty_data_guard.py  test_execute_plan.py  test_export.py  test_family_recommender.py  test_figure_composition.py  test_figure_id.py  test_gallery_regeneration.py  test_gam_logistic_utility.py  test_hmm_decoding_utility.py  test_index_emit.py  test_index_schema.py  test_intake_flow.py  test_km_survival_utility.py  test_layout.py  test_manifest_roundtrip.py  test_manuscript_alignment.py  test_manuscript_blueprint_import.py  (+46 more)
tests/fixtures/: minimal.manifest.yaml  multi_modality.manifest.yaml
tests/quality_rules/: __init__.py  grant.py  meta.py  omics.py  rhogtpase.py  sensitivity.py  shared.py
(+575 files in other folders)
